WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85271
[Chromium] Regression
r113405
ContextMenuImpl does not set misspelled word
https://bugs.webkit.org/show_bug.cgi?id=85271
Summary
[Chromium] Regression r113405 ContextMenuImpl does not set misspelled word
Hironori Bono
Reported
2012-05-01 02:55:56 PDT
Greetings, Sorry for my stupid request. My WebKit change
r113405
(*1) has a bonehead mistake that it sets 'range->text()' to misspelledWord instead of calling selectMisspelledWord(). Unfortunately, this code causes a serious inconsistency that it sets empty text to misspelledWord when a user enables asynchronous spellchecking and right-clicks a misspelled word without manually selecting it. Is it possible to replace this 'range-text()' with 'selectMispelledWord()' for consistency with the behavior of synchronous spellchecking? (*1)
http://trac.webkit.org/changeset/113405
Regards, Hironori Bono
Attachments
Quick fix v1
(1.54 KB, patch)
2012-05-01 03:32 PDT
,
Hironori Bono
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hironori Bono
Comment 1
2012-05-01 03:32:58 PDT
Created
attachment 139606
[details]
Quick fix v1 Greetings, Would it be possible to review this patch? Regards, Hironori Bono
Kent Tamura
Comment 2
2012-05-01 03:37:49 PDT
Comment on
attachment 139606
[details]
Quick fix v1 Looks reasonable.
WebKit Review Bot
Comment 3
2012-05-01 04:17:27 PDT
Comment on
attachment 139606
[details]
Quick fix v1 Clearing flags on attachment: 139606 Committed
r115718
: <
http://trac.webkit.org/changeset/115718
>
WebKit Review Bot
Comment 4
2012-05-01 04:17:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug