[Chromium] Regression r113405 ContextMenuImpl does not set a misspelled word https://bugs.webkit.org/show_bug.cgi?id=85271

Reviewed by Kent Tamura.

This change calls selectMisspelledWord() to get a misspelled word so Chrome can
set the misspelledWord variable without selecting text.

* src/ContextMenuClientImpl.cpp:
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):


Canonical link: https://commits.webkit.org/102816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115718 268f45cc-cd09-0410-ab3c-d52691b4dbfc